<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#d4d4d4"
    android:clickable="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_title"
        android:id="@+id/appTitleText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:background="#815a8e"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:layout_margin="5dp"
        android:height="50dp"
        android:padding="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/question_one"
        android:id="@+id/questionNumberText"
        android:layout_below="@+id/appTitleText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:textSize="30dp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/question_one"
        android:id="@+id/questionText"
        android:textColor="#000000"
        android:textSize="20dp"
        android:layout_below="@+id/questionNumberText"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:id="@+id/answerRadioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_one_text"
            android:id="@+id/answerOneRadio"
            android:textSize="15dp"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_two_text"
            android:id="@+id/answerTwoRadio"
            android:textSize="15dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_three_text"
            android:id="@+id/answerThreeRadio"
            android:textSize="15dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_four_text"
            android:id="@+id/answerFourRadio"
            android:textSize="15dp" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_quiz_button"
        android:id="@+id/exitQuizButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="#466e9e"
        android:textSize="20dp"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:onClick="onClickFinish"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:id="@+id/backButton"
        android:background="#466e9e"
        android:padding="5dp"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:layout_above="@+id/exitQuizButton"
        android:layout_alignLeft="@+id/exitQuizButton"
        android:layout_alignStart="@+id/exitQuizButton"
        android:onClick="onClickBack" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_button"
        android:id="@+id/answerButton"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:background="#466e9e"
        android:padding="5dp"
        android:layout_above="@+id/exitQuizButton"
        android:layout_centerHorizontal="true"
        android:width="150dp"
        android:onClick="onClickAnswer"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        android:id="@+id/nextButton"
        android:textSize="20dp"
        android:textColor="#ffffff"
        android:padding="5dp"
        android:background="#466e9e"
        android:layout_above="@+id/exitQuizButton"
        android:layout_alignRight="@+id/exitQuizButton"
        android:layout_alignEnd="@+id/exitQuizButton"
        android:onClick="onClickNext"/>

</RelativeLayout>